--- a/day1(preprocessing).ipynb
+++ b/day1(preprocessing).ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#import the libraries\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
